# RetailFlowGroup

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  new_structure.txt  project_structure.txt  pyproject.toml  retailflow_project.html
bootstrap/: kafka.py  postgres.py  products.py  seed.py  users.py
config/: alpha.yaml  beta.yaml  loader.py  models.py
data/seed/: alpha_products.csv  beta_products.csv
domain/: enums.py  models.py  types.py
domain/models/: __init__.py  clickstream.py  order.py  product.py  user.py
generator/: context.py  runner.py
generator/builders/: alpha_builder.py  base.py  beta_builder.py
generator/core/: fake.py  id_generator.py  ip_generator.py  loop.py  utils.py
generator/pipeline/: base.py  builder.py
generator/schemas/: __init__.py
generator/session/: handler_registry.py  machine.py  state.py  transitions.py
generator/stores/: base.py  factory.py
infrastructure/config/: kafka_config.py  paths.py  settings.py  topics.yaml
infrastructure/core/: db_service.py
infrastructure/kafka/: admin.py  deserializer.py  factory.py  producer.py  serializer.py  topics.py
infrastructure/mongo/: client.py  factory.py
infrastructure/postgres/: admin.py  decorators.py  factory.py  models.py  session.py
ingestion/loaders/: alpha_product_loader.py  base_product_loader.py  beta_product_loader.py  product_loader.py
schemas/: factory.py
schemas/clickstreams/: alpha.py
schemas/orders/: alpha.py  beta.py
sinks/: base.py  kafka.py  mongo.py  postgres.py
tests/generator/: tests_state_machine.py
(+56 files in other folders)
