[project]
name = "retailflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=26.1.0",
    "authlib>=1.7.2",
    "cachetools>=7.1.4",
    "certifi>=2026.5.20",
    "confluent-kafka>=2.14.2",
    "dataclasses-avroschema>=0.70.0",
    "faker>=40.23.0",
    "geoip2>=5.2.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
]
